# ComfyUI_NTCosyVoice

./: .gitignore  README.md  __init__.py  downloadmodel.py  github  github.pub  pyproject.toml  requirements.txt  run_test.py
.github/workflows/: publish.yml
cosyvoice/flow/: decoder.py  flow_matching.py
cosyvoice/utils/: class_utils.py
examples/: CrossLingual.json  Instruct2.json  ZeroShot.json
nodes/: clone_speaker.py  cross_lingual_sampler.py  delete_speaker.py  instruct2_sampler.py  refresh_speakers.py  select_speaker.py  shared_cosyvoice.py  utils.py  zero_shot_sampler.py
