[project]
name = "ntcosyvoice"
description = "ComfyUI_NTCosyVoice is a plugin of ComfyUI for Cosysvoice2"
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["conformer==0.3.2", "deepspeed==0.14.2", "diffusers==0.27.2", "gdown==5.1.0", "grpcio==1.57.0", "grpcio-tools==1.57.0", "huggingface-hub==0.25.2", "modelscope", "hydra-core==1.3.2", "HyperPyYAML==1.2.2", "inflect==7.3.1", "librosa==0.10.2", "lightning==2.2.4", "matplotlib==3.7.5", "modelscope==1.15.0", "networkx==3.1", "omegaconf==2.3.0", "openai-whisper", "protobuf==4.25", "pydantic==2.7.0", "rich==13.7.1", "soundfile==0.12.1", "tensorboard", "tensorrt-cu12", "tensorrt-cu12-bindings", "tensorrt-cu12-libs", "transformers==4.40.1", "wget==3.2", "WeTextProcessing==1.0.3", "onnxruntime-gpu", "torch", "torchvision", "torchaudio"]

[project.urls]
Repository = "https://github.com/muxueChen/ComfyUI_NTCosyVoice"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ComfyUI_NTCosyVoice"
Icon = ""
